proc copiarse adaptado + me falto un param

--- a/main.tex
+++ b/main.tex
@@ -163,7 +163,7 @@ Luego veremos bien el formato, esto de momento es para tener un esqueleto.
     \requiereLargo{ 
         perteneceAlumno(c1, edr.aula) \yLuego
         \\ perteneceAlumno(c2, edr.aula) \yLuego 
-        \\ enRango(c1, c2) \yLuego
+        \\ enRango(c1, c2, edr.aula) \yLuego
         \\ \existe{i}{\Z}{suExamen(c1, edr)[i] = "" \land suExamen(c2, edr)[i] \neq ""} \yLuego
         \\ (edr_0 = edr)
     } 
